ADD temp gif, IMPROVE background animation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         <img src="./assets/logo.png" width="100" alt="">
     </nav>
 
-    <div class="bar">
-    </div>
+    <div class="bar"></div>
+    
+    <picture id="hero-gif">
+        <source srcset="./assets/ar-hero.gif"> <img src="./assets/ar-hero.gif">
+    </picture>
 
     <div id="hero" class="flex row">
         <h1>TRANSFORM<br>PHYSICAL<br>WORLD into<br>
